WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255221
REGRESSION(
262572@main
): [GTK] No contents renderer after process swap for navigation
https://bugs.webkit.org/show_bug.cgi?id=255221
Summary
REGRESSION(262572@main): [GTK] No contents renderer after process swap for na...
Carlos Garcia Campos
Reported
2023-04-10 06:11:08 PDT
In case of process swap current drawing area is destroyed causing the AC mode to be exited, and the new drawing area sends the enter AC message before the UI process has switched drawing areas, so the message is just ignored.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-04-10 06:24:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12569
EWS
Comment 2
2023-04-11 00:49:41 PDT
Committed
262812@main
(f938f81c9a7b): <
https://commits.webkit.org/262812@main
> Reviewed commits have been landed. Closing PR #12569 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug